--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.big-sqvad {
+  width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  border: 3px solid black;
+  list-style: none;
+  flex-direction: row;
+  height: 300px;
+  padding: 0;
+}
+
+.small-sqvad {
+  width: 100px;
+  border: 2px solid red;
+  height: 100px;
+  box-sizing: border-box;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.reset-button {
+  color: aqua;
 }
 
-.App-link {
-  color: #61dafb;
+.pick-fihter {
+  width: 80%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-fihter {
+  width: 20%;
+  height: 100%;
 }
+
+
